--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <main>
-    <div>
-        <ul>
-            <li *ngFor="let item of items">
-                {{ item }}
-            </li>
-        </ul>
-    </div>
+    <app-items [items]="items"></app-items>
     <app-pagination [list]="items"></app-pagination>
 </main>
