--- a/src/app/pagination/components/pagination/pagination.component.html
+++ b/src/app/pagination/components/pagination/pagination.component.html
@@ -1,7 +1,20 @@
 <div class="pagination-container">
     <ul>
-        <li *ngFor="let item of list; let i=index">
-            {{ i+ 1}}
+        <li class="carret">
+            <span>
+                &#x2039;
+            </span>
+        </li>
+        <li *ngFor="let item of list; let i = index"
+            (click)="selectPage(i + 1)">
+            <span [ngClass]="{'active': i + 1 === currentPage}">
+                {{ i+ 1}}
+            </span>
+        </li>
+        <li class="carret">
+            <span>
+                &#x203A;
+            </span>
         </li>
     </ul>
 </div>
