Add handlers for carrets and disabled classes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main>
     <app-items [items]="items"></app-items>
-    <app-pagination [list]="items"></app-pagination>
+    <app-pagination [items]="items"></app-pagination>
 </main>
