--- a/src/app/pagination/components/pagination/pagination.component.html
+++ b/src/app/pagination/components/pagination/pagination.component.html
@@ -1,17 +1,21 @@
 <div class="pagination-container">
     <ul>
-        <li class="carret">
+        <li class="carret"
+            [ngClass]="{'disabled': currentPage === 1}"
+            (click)="selectPage(currentPage - 1)">
             <span>
                 &#x2039;
             </span>
         </li>
-        <li *ngFor="let item of list; let i = index"
+        <li *ngFor="let item of items; let i = index"
             (click)="selectPage(i + 1)">
             <span [ngClass]="{'active': i + 1 === currentPage}">
                 {{ i+ 1}}
             </span>
         </li>
-        <li class="carret">
+        <li class="carret"
+            [ngClass]="{'disabled': currentPage === items.length}"
+            (click)="selectPage(currentPage + 1)">
             <span>
                 &#x203A;
             </span>
