--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -1,3 +1,7 @@
 ul {
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-inline-start: 0px;
 }
