Introduce shell component as a facade

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<main>
-    <app-items [items]="items"></app-items>
-    <app-pagination [items]="items"></app-pagination>
-</main>
+<app-shell></app-shell>
