Add items component for displaying data

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,5 +1,7 @@
-<ul>
-    <li *ngFor="let item of items">
-        {{ item }}
-    </li>
-</ul>
+<div class="container">
+    <ul>
+        <li *ngFor="let item of items">
+            {{ item.name }}
+        </li>
+    </ul>
+</div>
